--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,21 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=devuser
+      - DB_PASS=changeme
+    depends_on:
+      - db
+  db:
+     image: postgres-alpine
+     volumes:
+         - dev-db-data: /var/lib/postgresql/data
+     environment:
+         - POSSTGRES_DB=devdb
+         - POSSTGRES_USER=devuser
+         - POSSTGRES_PASSWORD=changeme
+         
+volumes:
+    dev-db-data:
