--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
     environment:
@@ -17,16 +18,19 @@ services:
       - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=changeme
+      - DEBUG=1
     depends_on:
       - db
+
   db:
-     image: postgres-alpine
-     volumes:
-         - dev-db-data: /var/lib/postgresql/data
-     environment:
-         - POSSTGRES_DB=devdb
-         - POSSTGRES_USER=devuser
-         - POSSTGRES_PASSWORD=changeme
-         
+    image: postgres:13-alpine
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=changeme
+
 volumes:
-    dev-db-data:
+  dev-db-data:
+  dev-static-data:
